# hello_triangle_cross_platform

./: .gitignore  Backend.cpp  Backend.h  BrowserBackend.cpp  BrowserBackend.h  CMakeLists.txt  DesktopBackend.cpp  DesktopBackend.h  IBackend.h  Image.cpp  Image.h  gl_backend.h  main.cpp
assets/: shader.frag  shader.vert
platform/: Platform.cpp  Platform.h
platform/browser/: PlatformBrowser.cpp  PlatformBrowser.h  index.html
platform/desktop/: PlatformDesktop.cpp  PlatformDesktop.h
